<resources>
	<string name="app_name">FidoCadJ</string>
	<string name="File">File</string>
	<string name="New">New</string>
	<string name="Open">Open file</string>
	<string name="Open_deprecated">Open file (deprecated)</string>
	<string name="Save">Save</string>
	<string name="SaveName">Save as...</string>
	<string name="Export">Export</string>
	<string name="Print">Print</string>
	<string name="Close">Close</string>
	<string name="Do_Not_Save">Do not save</string>
	<string name="No_file_opened">No file opened.</string>
	<string name="Edit_menu">Edit</string>
	<string name="Undo">Undo</string>
	<string name="Redo">Redo</string>
	<string name="Cut">Cut</string>
	<string name="Copy">Copy</string>
	<string name="Paste">Paste</string>
	<string name="SelectAll">Select All</string>
	<string name="Rotate">Rotate</string>
	<string name="Mirror_E">Mirror</string>
	<string name="Selection">Select</string>
	<string name="tooltip_selection">A or space: Select and move an object. type R to rotate, S to swap.</string>
	<string name="Zoom_p">Zoom</string>
	<string name="tooltip_zoom">Left click: increase zoom, right click: decrease zoom.</string>
	<string name="Hand">Pan</string>
	<string name="tooltip_hand">Scroll through a big drawing.</string>
	<string name="Line">Line</string>
	<string name="tooltip_line">L: Draw a line.</string>
	<string name="Text">Text</string>
	<string name="tooltip_text">T: Place a text.</string>
	<string name="Bezier">Bézier</string>
	<string name="tooltip_bezier">B: Draw a four point Bézier primitive.</string>
	<string name="Polygon">Polygon</string>
	<string name="tooltip_polygon">P: Place a polygon.</string>
	<string name="Ellipse">Ellipse</string>
	<string name="tooltip_ellipse">E: Place an ellipse (hold Control key to obtain a circle).</string>
	<string name="Rectangle">Rect.</string>
	<string name="tooltip_rectangle">R: Place a rectangle.</string>
	<string name="Connection">Connection</string>
	<string name="tooltip_connection">C: Place an electrical connection.</string>
	<string name="PCBline">PCB Line</string>
	<string name="tooltip_pcbline">I: Place a Printed Circuit Board line.</string>
	<string name="PCBpad">PCB Pad</string>
	<string name="tooltip_pcbpad">Z: Place a Printed Circuit Board pad.</string>
	<string name="tooltip_layerSel">Change selected layer.</string>
	<string name="ShowGrid">Show grid</string>
	<string name="SnapToGrid">Snap to grid</string>
	<string name="LibraryUpdate">Update libraries</string>
	<string name="Circuit">Circuit</string>
	<string name="Define">View code</string>
	<string name="DefineClipboard">New circuit from clipboard</string>
	<string name="Layer_opt">Layers</string>
	<string name="Circ_opt">Options</string>
	<string name="Macro_origin">Show macro origin</string>
	<string name="View">View</string>
	<string name="Export_completed">Export has been done.</string>
	<string name="Export_error">Error during exporting:</string>
	<string name="PDF_Font_error">Some fonts have not been exported. Use Helvetica, Courier, Times or Symbol.</string>
	<string name="Illegal_filename">Invalid filename.</string>
	<string name="File_not_found">File not found.</string>
	<string name="Print_uncomplete">Cannot end printing.</string>
	<string name="Open_error">File access error:</string>
	<string name="Save_error">Unable to save:</string>
	<string name="Time">Time elapsed</string>
	<string name="Eport_Memory_Error">Insufficient memory. Reduce export resolution.</string>
	<string name="Circ_opt_t">Drawing options</string>
	<string name="Unrecognized_file">File is corrupted or it is not a FidoCad drawing.</string>
	<string name="Circ_exp_t">Export in a graphic file</string>
	<string name="Resolution">Resolution:</string>
	<string name="Wrong_file_format">Invalid file format</string>
	<string name="Anti_aliasing">Anti aliasing</string>
	<string name="B_W">Black and white</string>
	<string name="File_format">File format:</string>
	<string name="File_name">File name:</string>
	<string name="Browse">Browse</string>
	<string name="Select_file_export">File to export</string>
	<string name="Ok_btn">OK</string>
	<string name="Cancel_btn">Cancel</string>
	<string name="macrofont">Font for name and value:</string>
	<string name="macroSize">Vertical size of associated text:</string>
	<string name="stroke_size_straight">Staight lines stroke width:</string>
	<string name="stroke_size_oval">Bent lines stroke width:</string>
	<string name="PCBsizes">PCB primitives</string>
	<string name="connection_size">Diameter of a connection primitive</string>
	<string name="Warning">Warning!</string>
	<string name="Warning_overwrite">A file with the same name exists. Overwrite it?</string>
	<string name="Warning_unsaved">There are unsaved changes. Continue anyway?</string>
	<string name="Warning_quit">Do you want to quit FidoCadJ?</string>
	<string name="Warning_noname">You should specify a file name.</string>
	<string name="Warning_extension">The file extension is non specified or is incorrect. Do you want to adjust it?</string>
	<string name="Param_opt">Parameters</string>
	<string name="Layer_editor">Layer editor</string>
	<string name="Edit">Modify</string>
	<string name="Warning_select_layer">You must select a layer to edit it.</string>
	<string name="Opacity">Opacity:</string>
	<string name="Cir_opt_t">FidoCadJ preferences</string>
	<string name="Small">Small</string>
	<string name="Medium_1">Medium 1</string>
	<string name="Medium_2">Medium 2</string>
	<string name="Big">Big</string>
	<string name="Very_big">Very big</string>
	<string name="Zoom_fit">Fit</string>
	<string name="Zoom">Zoom:</string>
	<string name="Anti_al">Anti aliasing</string>
	<string name="Profile">Activate profiler</string>
	<string name="Grid_width">Grid width:</string>
	<string name="lib_dir">Libraries directory:</string>
	<string name="Select_lib_directory">Choose the libraries directory</string>
	<string name="Format_invalid">I can not read one of the numbers typed.</string>
	<string name="TextToolbar">Show text labels in the toolbar</string>
	<string name="SmallIcons">Use small icons in the toolbar</string>
	<string name="strict_FC_comp">Strict FidoCad compatibility</string>
	<string name="extFCJ_s">Activate FidoCadJ extension while saving files</string>
	<string name="extFCJ_c">Activate FidoCadJ extension while copying elements</string>
	<string name="Restart">Startup</string>
	<string name="Drawing">Drawing</string>
	<string name="FidoCad">FidoCadJ extensions</string>
	<string name="pcbline_width">PCB line width:</string>
	<string name="pcbpad_width">PCB pad width:</string>
	<string name="pcbpad_height">PCB pad height:</string>
	<string name="pcbpad_intw">PCB hole diameter:</string>
	<string name="Quaqua">Use Quaqua (deactivate it if FidoCadJ is too slow)</string>
	<string name="split_nonstandard">Split non standard macros when saving (obsolete)</string>
	<string name="split_nonstandard_copy">Split non standard macros when copy/pasting (obsolete)</string>
	<string name="length">Length:</string>
	<string name="Enter_code">FidoCadJ code</string>
	<string name="Layer_options">Layer options</string>
	<string name="Description">Description:</string>
	<string name="IsVisible">Visible</string>
	<string name="Circuit_l">Circuit</string>
	<string name="Bottom_copper">Copper side</string>
	<string name="Top_copper">Component side</string>
	<string name="Silkscreen">Silkscreen</string>
	<string name="Other_1">Other 1</string>
	<string name="Other_2">Other 2</string>
	<string name="Other_3">Other 3</string>
	<string name="Other_4">Other 4</string>
	<string name="Other_5">Other 5</string>
	<string name="Other_6">Other 6</string>
	<string name="Other_7">Other 7</string>
	<string name="Other_8">Other 8</string>
	<string name="Other_9">Other 9</string>
	<string name="Other_10">Other 10</string>
	<string name="Other_11">Other 11</string>
	<string name="Other_12">Other 12</string>
	<string name="Elapsed">Elapsed time</string>
	<string name="Averaged">ms, on average</string>
	<string name="Runs">redraws.</string>
	<string name="MsOn">ms in</string>
	<string name="Print_dlg">Printing options</string>
	<string name="Mirror">Print mirror</string>
	<string name="FitPage">Fit to page</string>
	<string name="Landscape">Landscape mode</string>
	<string name="About_menu">About FidoCadJ</string>
	<string name="About">About</string>
	<string name="Version"></string>
	<string name="programDescription1">A multiplatform FidoCad editor.</string>
	<string name="programDescription2">The FidoCadJ team, 2007-2014.</string>
	<string name="programDescription3"></string>
	<string name="ExportOptions">Export options:</string>
	<string name="Multiply_sizes">Magnification:</string>
	<string name="Warning_mul">The magnification ratio for vector format export should be comprised between 0.01 and 100.</string>
	<string name="ctrl_text">Text:</string>
	<string name="ctrl_control">Control point</string>
	<string name="ctrl_layer">Layer:</string>
	<string name="ctrl_xsize">X size:</string>
	<string name="ctrl_ysize">Y size:</string>
	<string name="ctrl_angle">Angle:</string>
	<string name="ctrl_mirror">Mirrored</string>
	<string name="ctrl_boldface">Boldface</string>
	<string name="ctrl_font">Font:</string>
	<string name="ctrl_name">Name:</string>
	<string name="ctrl_value">Value:</string>
	<string name="ctrl_arrow_start">Arrow at the start</string>
	<string name="ctrl_arrow_end">Arrow at the end</string>
	<string name="ctrl_arrow_length">Arrow head length:</string>
	<string name="ctrl_arrow_half_width">Arrow head half width:</string>
	<string name="ctrl_arrow_style">Arrow head style:</string>
	<string name="ctrl_dash_style">Dashing style:</string>
	<string name="ctrl_name_point">Name coordinates:</string>
	<string name="ctrl_value_point">Value coordinates:</string>
	<string name="ctrl_filled">Filled</string>
	<string name="ctrl_width">Width:</string>
	<string name="ctrl_x_radius">Horizontal width:</string>
	<string name="ctrl_y_radius">Vertical width:</string>
	<string name="ctrl_internal_radius">Internal diameter:</string>
	<string name="ctrl_pad_style">Pad style:</string>
	<string name="ctrl_italic">Italic</string>
	<string name="Complexcurve">Curve</string>
	<string name="tooltip_curve">V: Open or closed curve.</string>
	<string name="ctrl_closed_curve">Closed path</string>
	<string name="Add_node">Add a node</string>
	<string name="Remove_node">Remove a node</string>
	<string name="Shift_cp">Shift elements during copy/paste</string>
	<string name="Library_file">Library filename:</string>
	<string name="Library_name">Library complete name:</string>
	<string name="Group">Group:</string>
	<string name="Name">Name:</string>
	<string name="SaveSymbol">Symbol:</string>
	<string name="Symbolize">Symbol-o-matic</string>
	<string name="Delete">Delete</string>
	<string name="Unsymbolize">Vectorize</string>
	<string name="Rename">Rename</string>
	<string name="Language">Language</string>
	<string name="Key">Key:</string>
	<string name="RenKey">Change key</string>
	<string name="InvKey">Invalid key.</string>
	<string name="DupKey">The specified key is already in use in the library or contains forbidden characters: space, . or ].</string>
	<string name="SpaceKey">The key must not contain spaces.</string>
	<string name="SnapToGridOrigin">Snap origin on grid</string>
	<string name="DirNotFound">The user library directory should be defined in the FidoCadJ settings before trying to create or modify library symbols.</string>
	<string name="ChangeKeyWarning">Warning: the macro could not be visualized correctly if it is already in use in your drawing. Continue?</string>
	<string name="Copy_split">Copy, split non standard macros</string>
	<string name="use_sensors_rotate_mirror">Use sensors gestures for rotate and mirror</string>
	<string name="Path_lbl">Path:</string>
	<string name="Default_filename">noname.fcd</string>
</resources>