<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <detail>
    IMPORTANT NOTE: the unimplemented menu resources are not to be shown in the
    development version. Each time a menu option is implemented (I mean, some 
    code handles the action which is associated to it), remove the associated
    line:
    
    android:visible="false"
    
    At the end, when all menu actions will be implemented, remove this note 
    :-)
    </detail>
    
    <item
        android:id="@+id/file"
        android:showAsAction="ifRoom"
        android:title="@string/File">
        <menu>
            <item
                android:id="@+id/new_drawing"
        		android:title="@string/New"
        		android:visible="true" />
            <item
                android:id="@+id/open_file"
        		android:title="@string/Open"
        		android:visible="true" />
            <detail>
            <item
                android:id="@+id/open_file_deprecated"
        		android:title="@string/Open_deprecated"
        		android:visible="true" />
        	</detail>
            <item
                android:id="@+id/save"
        		android:title="@string/Save"
        		android:visible="true" />
            <item
                android:id="@+id/save_with_name"
        		android:title="@string/SaveName"
        		android:visible="true" />
            <item
                android:id="@+id/delete"
        		android:title="@string/Delete"
        		android:visible="true" />
            <item
                android:id="@+id/export"
        		android:title="@string/Export"
        		android:visible="false" />
            <item
                android:id="@+id/print"
        		android:title="@string/Print"
        		android:visible="false" />
            <item
                android:id="@+id/options"
        		android:title="@string/Circ_opt_t"
        		android:visible="false" />
        </menu>
    </item>
    
    <item
        android:id="@+id/edit_menu"
        android:showAsAction="ifRoom"
        android:title="@string/Edit_menu">
        <menu>
        	<item
                android:id="@+id/menu_undo"
        		android:icon="@drawable/cancel"
        		android:title="@string/Undo"/>
        	<item
                android:id="@+id/menu_redo"
                android:icon="@drawable/redo"
        		android:title="@string/Redo" />
        	<item android:id="@+id/menu_cut"
        		android:icon="@drawable/cut"
          		android:title="@string/Cut" />
			<item android:id="@+id/menu_copy"	
				android:icon="@drawable/copy"
          		android:title="@string/Copy" />
          	<detail>
          		Splitting the nonstandard macros requires to write stuff on a
          		temporary file. This does not work yet with Android.
          	</detail>
        	<item
                android:id="@+id/menu_copy_split"
        		android:title="@string/Copy_split" 
        		android:visible="false"/>
        	<item android:id="@+id/menu_paste"
				android:icon="@drawable/paste"
          		android:title="@string/Paste" />
        	<item
                android:id="@+id/menu_define_clipboard"
        		android:title="@string/DefineClipboard"
        		android:visible="false" />
        	<item
                android:id="@+id/menu_selectall"
        		android:title="@string/SelectAll" />
        	<item android:id="@+id/menu_delete"
        		android:icon="@drawable/delete"
          		android:title="@string/Delete" />          
			<item android:id="@+id/menu_rotate"
				android:icon="@drawable/rotate"
          		android:title="@string/Rotate" />  
			<item android:id="@+id/menu_mirror"
				android:icon="@drawable/mirror"
				
          		android:title="@string/Mirror_E" />
        </menu>
    </item>
    
    <item
        android:id="@+id/view"
        android:showAsAction="ifRoom"
        android:title="@string/Drawing">
        <menu>
            <item
                android:id="@+id/layer"
        		android:title="@string/tooltip_layerSel"
        		android:visible="true" />
        	<item
                android:id="@+id/zoomtofit"
        		android:title="@string/Zoom_fit"
        		android:visible="true" />
        	<item
                android:id="@+id/showgrid"
        		android:title="@string/ShowGrid"
        		android:visible="true"
        		android:checkable="true"
        		android:checked="true" />
        	<item
                android:id="@+id/snaptogrid"
        		android:title="@string/SnapToGrid"
        		android:visible="true"
        		android:checkable="true"
        		android:checked="true" />
        	<item
                android:id="@+id/use_sensors_rotate_mirror"
        		android:title="@string/use_sensors_rotate_mirror"
        		android:visible="true"
        		android:checkable="true"
        		android:checked="true" />
        </menu>
    </item>
    
    <item
        android:id="@+id/circuit"
        android:showAsAction="ifRoom"
        android:title="@string/Circuit_l"
        android:visible="false"
         >
       
    </item>
    
    <item
        android:id="@+id/about"
        android:showAsAction="ifRoom"
        android:title="@string/About"/>
    
</menu>



