<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/saveName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_white"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Path_lbl"
            android:textColor="@color/active_dark" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/editPath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/field_background"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="text"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            
            android:textColor="@color/active_dark" >
        </EditText>

        <ImageView
            android:id="@+id/explorerBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_more" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_white"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/File_name"
            android:textColor="@color/active_dark" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/field_background"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="text"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:text="@string/Default_filename"
            android:textColor="@color/active_dark" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:background="@color/background_white"
        android:gravity="right" >

        <Button
            android:id="@+id/save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/active_dark"
            android:text="@string/Save" />

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/active_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel_btn" />
    </LinearLayout>

</LinearLayout>